@@ -1,25 +1,24 @@
 package com.ibm.internflow.service;
 import com.ibm.internflow.dto.ActivitiesDto;
 import com.ibm.internflow.entity.ActivitiesEntity;
-import com.ibm.internflow.entity.StudentEntity;
 import com.ibm.internflow.repository.ActivitiesRepository;
 import com.ibm.internflow.repository.StudentRepository;
-import com.ibm.internflow.service.ActivitiesService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -41,20 +40,25 @@ public class ActivitiesServiceTest {
 
     @Test
     void testGetActivities() {
-        ActivitiesEntity activityEntity = new ActivitiesEntity();
-        activityEntity.setActivityId(1L);
-        activityEntity.setActivityName("Session1");
-        activityEntity.setCreationDate(LocalDateTime.now());
-        activityEntity.setActivityDate(LocalDate.now());
+        ActivitiesEntity activityEntity1 = new ActivitiesEntity();
+        activityEntity1.setActivityId(1L);
+        activityEntity1.setActivityName("Session1");
+        activityEntity1.setCreationDate(LocalDateTime.now());
+        activityEntity1.setActivityDate(LocalDate.now());
 
-        when(activitiesRepository.findAll()).thenReturn(Collections.singletonList(activityEntity));
+        ActivitiesEntity activityEntity2 = new ActivitiesEntity();
+        activityEntity2.setActivityId(2L);
+        activityEntity2.setActivityName("Session2");
+        activityEntity2.setCreationDate(LocalDateTime.now());
+        activityEntity2.setActivityDate(LocalDate.now());
+
+        List<ActivitiesEntity> activitiesEntities = List.of(activityEntity1,activityEntity2);
+
+        when(activitiesRepository.findAll()).thenReturn(activitiesEntities);
 
         var result = activitiesService.getActivities();
 
-        assertEquals(1, result.size());
-        assertEquals(activityEntity.getActivityId(), result.get(0).getActivityId());
-        assertEquals(activityEntity.getActivityName(), result.get(0).getActivityName());
-        assertEquals(activityEntity.getActivityDate(), result.get(0).getActivityDate());
+        assertEquals(2, result.size());
     }
 
     @Test
@@ -66,7 +70,6 @@ public class ActivitiesServiceTest {
         ActivitiesEntity activityEntity = new ActivitiesEntity();
         activityEntity.setActivityId(1L);
         activityEntity.setActivityName("Session1");
-        activityEntity.setCreationDate(LocalDateTime.now());
         activityEntity.setActivityDate(LocalDate.now());
 
         when(activitiesRepository.save(any(ActivitiesEntity.class))).thenReturn(activityEntity);
@@ -77,7 +80,15 @@ public class ActivitiesServiceTest {
         assertEquals(activityDto.getActivityName(), resultDto.getActivityName());
         assertEquals(activityDto.getActivityDate(), resultDto.getActivityDate());
 
-        verify(activitiesRepository, times(1)).save(any(ActivitiesEntity.class));
+    }
+
+    @Test
+    public void testDeleteByIdWhenActivityNotFound() {
+        Long activityIdToDelete = 1L;
+
+        when(activitiesRepository.findById(activityIdToDelete)).thenReturn(Optional.empty());
+
+        assertThrows(NoSuchElementException.class, () -> activitiesService.deleteById(activityIdToDelete));
     }
 
 }
